modelagem booleana e vetorial

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+*.h5
 *.pdf
 *.docx
 *.pyc
-**/Aulas
-**/Tarefas
-tp1_crawler/.ipynb_checkpoints/*
-tp1_crawler/crawler/__pycache__/*
+*.npz
+*.idx
+*.mp4
+*.p
+*.ipynb_checkpoints
+embeddings.txt
+Embedding/assignment_cache
+Embedding/embeddings_data
+tp2_indexador/testWiki
+tp2_indexador/wikiSample
+tp2_indexador/Relatório.ipynb
