--- a/Embedding/requirements.txt
+++ b/Embedding/requirements.txt
@@ -18,7 +18,7 @@ optuna==2.7.0
 packaging==20.9
 pandas==1.1.5
 pbr==5.6.0
-Pillow==8.2.0
+pillow>=8.3.2
 prettytable==2.1.0
 pyparsing==2.4.7
 pyperclip==1.8.2
